[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://src/UI_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://imports/sound/die.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "change_level"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_next_level"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "start_level"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/wave_label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.9, 2.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -521.018, 329.023 ), Vector2( 0, 329.023 ), Vector2( 0, 329.023 ), Vector2( 519, 329.023 ) ]
}

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Paused" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Paused"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Paused"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -425.0
margin_bottom = -221.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="Paused/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="exit" type="Button" parent="Paused/VBoxContainer"]
margin_top = 114.0
margin_right = 600.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "EXIT"

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="Main"]
anchor_right = 1.0
margin_right = 16.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave_label" type="Label" parent="Main"]
anchor_right = 1.0
margin_left = 519.0
margin_top = 329.023
margin_right = 535.0
margin_bottom = 423.023
custom_fonts/font = ExtResource( 2 )
text = "wave 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game_Over"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -214.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="Game_Over/VBoxContainer"]
margin_right = 500.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "RETRY"

[node name="exit" type="Button" parent="Game_Over/VBoxContainer"]
margin_top = 94.0
margin_right = 500.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 2 )
text = "EXIT"

[node name="VBoxContainer2" type="VBoxContainer" parent="Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -243.0
margin_right = 206.5
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game_Over/VBoxContainer2"]
margin_right = 413.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Game_Over/VBoxContainer2"]
margin_top = 78.0
margin_right = 413.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 2 )
text = "TOP SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_score" type="Label" parent="Game_Over/VBoxContainer2"]
margin_top = 156.0
margin_right = 413.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Game_Over/VBoxContainer2"]
margin_top = 234.0
margin_right = 413.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 2 )
text = "SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_score" type="Label" parent="Game_Over/VBoxContainer2"]
margin_top = 312.0
margin_right = 413.0
margin_bottom = 386.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_Complete" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level_Complete"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -251.977
margin_right = 19.0
margin_bottom = -60.9766
custom_fonts/font = ExtResource( 2 )
text = "WAVE
COMPLETE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start_level"
anims/change_level = SubResource( 1 )
anims/start_level = SubResource( 2 )

[node name="Game_over_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="Paused/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Paused/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Game_Over/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Game_Over/VBoxContainer/exit" to="." method="_on_exit_pressed"]
